@@ -4,10 +4,53 @@
 <psddl>
 
     <use file="psddldata/xtc.ddl.xml" 
-        cpp_headers="pdsdata/xtc/SrcAlias.hh"/>
+        cpp_headers="pdsdata/xtc/Src.hh"/>
 
-        <package name="Alias">
-    
+        <!-- ========================================================================= -->
+
+    <package name="Alias"> 
+
+        <pstype name="SrcAlias" pack="4">
+
+            <tag name="value-type"/>
+
+            <const name="AliasNameMax" value="31"/>
+
+            <attribute name="_src"       type="Pds.Src" accessor="src">
+            The src identifier
+            </attribute>
+
+            <attribute name="_aliasName" type="char" shape="AliasNameMax" accessor="aliasName">
+            Alias name for src identifier
+            </attribute>
+
+            <attribute name="_pad1" type="char"/>
+
+            <method name="operator &lt;" type="uint8_t">
+                <arg name="other" type="SrcAlias"/>
+                <expr lang="C++" value="(strcmp({self}._aliasName,other._aliasName)&lt;0)"/>
+            </method>
+
+            <method name="operator ==" type="uint8_t">
+                <arg name="other" type="SrcAlias"/>
+                <expr lang="C++" value="(strcmp({self}._aliasName,other._aliasName)==0)"/>
+            </method>
+
+            <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
+
+            <ctor>
+                Full constructor
+                <tag name="auto"/>
+                <attr-init dest="_pad1" value="0"/>
+            </ctor>
+
+        </pstype>
+
+        <!-- ========================================================================= -->
+
         <pstype name="ConfigV1" version="1" type_id="Id_AliasConfig">
         
             <tag name="config-type"/>
@@ -16,7 +59,7 @@
                 Number of alias definitions
             </attribute>
             
-            <attribute name="_srcAlias" type="Pds.SrcAlias"
+            <attribute name="_srcAlias" type="SrcAlias"
                 shape="{self}.numSrcAlias()" accessor="srcAlias" shape_method="srcAlias_shape">
                 SrcAlias configuration objects
             </attribute>
